<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calculator_bmi"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/title_calculator_bmi" />

    <item
        android:id="@+id/navigation_calculator_bc"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/title_calculator_bh" />


    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/baseline_quiz_24"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/baseline_bar_chart_24"
        android:title="@string/title_chart" />

</menu>